# vlc_sample

./: CMakeLists.txt  README.md  main.cpp
